@@ -1,3 +1,13 @@
+2006-08-04	Dwarakanath Rajagopal	<dwarak.rajagopal@amd.com>
+
+	* i386-dis.c (MXC,EMC): Define.
+	(OP_MXC): New function to handle cvt* (convert instructions) between
+	%xmm and %mm register correctly.
+	(OP_EMC): ditto.	
+	(prefix_user_table): Modified  cvtpi2pd,cvtpd2pi and cvttpd2pi 
+	instruction operands in PREGRP2,PREGRP3,PREGRP4 appropriately 
+	with EMC/MXC.
+
 2006-07-29  Richard Sandiford  <richard@codesourcery.com>
 
 	* m68k-opc.c (m68k_opcodes): Fix operand specificer in the Coldfire
